--- a/SpaceGrotesk.css
+++ b/SpaceGrotesk.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Space Grotesk';
     src: local('Space Grotesk Regular'), local('SpaceGrotesk-Regular'),
-        url('SpaceGrotesk-Regular.woff2') format('woff2'),
-        url('SpaceGrotesk-Regular.woff') format('woff'),
-        url('SpaceGrotesk-Regular.ttf') format('truetype'),
-        url('SpaceGrotesk-Regular.svg#SpaceGrotesk-Regular') format('svg');
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Regular.woff2') format('woff2'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Regular.woff') format('woff'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Regular.ttf') format('truetype'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Regular.svg#SpaceGrotesk-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -13,10 +13,10 @@
 @font-face {
     font-family: 'Space Grotesk';
     src: local('Space Grotesk Bold'), local('SpaceGrotesk-Bold'),
-        url('SpaceGrotesk-Bold.woff2') format('woff2'),
-        url('SpaceGrotesk-Bold.woff') format('woff'),
-        url('SpaceGrotesk-Bold.ttf') format('truetype'),
-        url('SpaceGrotesk-Bold.svg#SpaceGrotesk-Bold') format('svg');
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Bold.woff2') format('woff2'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Bold.woff') format('woff'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Bold.ttf') format('truetype'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Bold.svg#SpaceGrotesk-Bold') format('svg');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -25,10 +25,10 @@
 @font-face {
     font-family: 'Space Grotesk';
     src: local('Space Grotesk Medium'), local('SpaceGrotesk-Medium'),
-        url('SpaceGrotesk-Medium.woff2') format('woff2'),
-        url('SpaceGrotesk-Medium.woff') format('woff'),
-        url('SpaceGrotesk-Medium.ttf') format('truetype'),
-        url('SpaceGrotesk-Medium.svg#SpaceGrotesk-Medium') format('svg');
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Medium.woff2') format('woff2'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Medium.woff') format('woff'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Medium.ttf') format('truetype'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Medium.svg#SpaceGrotesk-Medium') format('svg');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -37,10 +37,10 @@
 @font-face {
     font-family: 'Space Grotesk';
     src: local('Space Grotesk SemiBold'), local('SpaceGrotesk-SemiBold'),
-        url('SpaceGrotesk-SemiBold.woff2') format('woff2'),
-        url('SpaceGrotesk-SemiBold.woff') format('woff'),
-        url('SpaceGrotesk-SemiBold.ttf') format('truetype'),
-        url('SpaceGrotesk-SemiBold.svg#SpaceGrotesk-SemiBold') format('svg');
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-SemiBold.woff2') format('woff2'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-SemiBold.woff') format('woff'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-SemiBold.ttf') format('truetype'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-SemiBold.svg#SpaceGrotesk-SemiBold') format('svg');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -49,10 +49,10 @@
 @font-face {
     font-family: 'Space Grotesk';
     src: local('Space Grotesk Light'), local('SpaceGrotesk-Light'),
-        url('SpaceGrotesk-Light.woff2') format('woff2'),
-        url('SpaceGrotesk-Light.woff') format('woff'),
-        url('SpaceGrotesk-Light.ttf') format('truetype'),
-        url('SpaceGrotesk-Light.svg#SpaceGrotesk-Light') format('svg');
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Light.woff2') format('woff2'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Light.woff') format('woff'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Light.ttf') format('truetype'),
+        url('https://cdn.jsdelivr.net/gh/MaikuDev/SpaceGrotesk@master/SpaceGrotesk-Light.svg#SpaceGrotesk-Light') format('svg');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
